Add API Gateway endpoint
Allows an HTTP post to an endpoint with a JSON object containing a base64 image and returns the closest product and the delta from the submitted image.
Decided to put a conditional block in so that it can be invoked raw for now as well as via the API gateway (that presents the base64_image inside a JSON document.
Might remove this at some point and just stick with the API gateway interface.

--- a/serverless.yml
+++ b/serverless.yml
@@ -33,6 +33,10 @@ provider:
 functions:
   find_product:
     handler: handler.handler
+    events:
+      - http:
+          path: colours/findProduct
+          method: post
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
